--- a/config/stimuli.yaml
+++ b/config/stimuli.yaml
@@ -3,8 +3,8 @@ RDK:
   dot_size: 0.6
   width: 10
   density: 0.001
-  speed: 0.2
-  duration: 0.5  # s
+  speed: 0.18
+  duration: 0.8  # s
   position_jitter: 1
   n_dots: 40
   field_size: 15  # dva
@@ -13,8 +13,21 @@ RDK:
 # ---------------------------------------
 Fixation:
   size: 0.5
-  color: [1, 1, 1]
+  color: [-1, 1, 1]
+  border_color: [1, 1, 1]
 # ---------------------------------------
 Calibration:
   num_tagets: 5
   target_size: 100
+# ---------------------------------------
+Go:
+  eccentricity: 13
+  dot_diameter: 0.6
+  density: 0.001
+  speed: 0.2
+  duration: 0.5  # s
+  position_jitter: 1
+  n_dots: 40
+  field_diameter: 15  # dva
+  dot_life: 80
+  side: left
