corrected function name

--- a/config/task.yaml
+++ b/config/task.yaml
@@ -9,7 +9,7 @@ saccade_initiation_duration: 500  # ms
 saccade_duration: 100  # ms
 max_rdk_duration: 800  # ms
 rdk_speeds: [15, 25]  # dva/s
-coherence_levels: [0.33, 1]  # proportion
+coherence_levels: [0.25, 0.5, 0.75, 1]  # proportion
 inter_trial_interval: 300  # ms
 reward_amount: 0.25  # ml
 directions: [90, 270]  # degrees (90=up, 270=down)
