--- a/config/eyetracker.yaml
+++ b/config/eyetracker.yaml
@@ -2,5 +2,8 @@ file_event_flags: 'LEFT,RIGHT,FIXATION,SACCADE,BLINK,MESSAGE,BUTTON,INPUT'
 link_event_flags: 'LEFT,RIGHT,FIXATION,SACCADE,BLINK,BUTTON,FIXUPDATE,INPUT'
 file_sample_data: 'LEFT,RIGHT,GAZE,HREF,RAW,AREA,HTARGET,GAZERES,BUTTON,STATUS,INPUT'
 link_sample_data: 'LEFT,RIGHT,GAZE,GAZERES,AREA,HTARGET,STATUS,INPUT'
-calibration_type: HV5
+calibration_type: HV9
 pupil_size_diameter: 1
+area_proportion: [0.8, 0.8]
+foreground_color: [-1, -1, -1]  # black
+background_color: [0, 0, 0]  # gray
